--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,15 @@
 cmake_minimum_required(VERSION 3.29)
-project(tbig CXX)
+project(tbig LANGUAGES C CXX ASM)
 
 set(CMAKE_CXX_STANDARD 23)
-set(CMAKE_CXX_STANDARD_REQUIRED on)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-file(GLOB_RECURSE SRC_FILES "src/*.cpp")
+add_compile_options(-madx -mbmi2 -mavx2 -O3 -march=native)
 
-add_executable(${PROJECT_NAME} ${SRC_FILES})
+file(GLOB_RECURSE CPP_FILES src/*.cpp)
+file(GLOB_RECURSE C_FILES src/*.c)
+file(GLOB_RECURSE ASM_FILES src/*.S)
 
-target_compile_options(${PROJECT_NAME} PRIVATE -madx -mbmi2 -mavx2 -O3 -march=native)
+add_executable(${PROJECT_NAME} ${CPP_FILES} ${C_FILES} ${ASM_FILES})
+
+set_source_files_properties(${ASM_FILES} PROPERTIES LANGUAGE ASM)
